--- a/requirements.txt
+++ b/requirements.txt
@@ -9,4 +9,7 @@ youtube-transcript-api==0.6.2
 openpyxl
 pytube
 torch==2.2.2+cpu
+torchvision==0.17.2+cpu
+torchaudio==2.2.2+cpu
+--extra-index-url https://download.pytorch.org/whl/cpu
 torchinfo
